Closed
Bug 1302956
Opened 9 years ago
Closed 9 years ago
NativeKey shouldn't run recursively
Categories
(Core :: Widget: Win32, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla52
People
(Reporter: masayuki, Assigned: masayuki)
References
Details
(Whiteboard: tpi:+)
Crash Data
Attachments
(2 files)
The main cause of bug 962140 is, PeekMessage() causes the message queue receiving next message (perhaps, due to odd API hook or something).
Basically, NativeKey shouldn't run recursively. NativeKey should manage itself as far as cannot run recursively.
| Assignee | ||
Comment 1•9 years ago
|
||
Updated•9 years ago
|
Priority: -- → P2
Whiteboard: tpi:+
| Assignee | ||
Comment 2•9 years ago
|
||
| Assignee | ||
Comment 3•9 years ago
|
||
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 6•9 years ago
|
||
I assume (and hope!) that these patches will fix bug 962140 completely.
Comment 7•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8794147 [details]
Bug 1302956 part.1 NativeKey should store latest instance with sLatestInstance
https://reviewboard.mozilla.org/r/80696/#review79646
Attachment #8794147 -
Flags: review?(m_kato) → review+
Comment 8•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8794148 [details]
Bug 1302956 part.2 NativeKey shouldn't handle char message if it's created during another instance is trying to remove a char message from the queue
https://reviewboard.mozilla.org/r/80698/#review79672
Attachment #8794148 -
Flags: review?(m_kato) → review+
Pushed by masayuki@d-toybox.com:
https://hg.mozilla.org/integration/autoland/rev/2903829cac14
part.1 NativeKey should store latest instance with sLatestInstance r=m_kato
https://hg.mozilla.org/integration/autoland/rev/3c4ca5845f2c
part.2 NativeKey shouldn't handle char message if it's created during another instance is trying to remove a char message from the queue r=m_kato
Comment 10•9 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/2903829cac14
https://hg.mozilla.org/mozilla-central/rev/3c4ca5845f2c
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Comment 11•9 years ago
|
||
Mark 51 as won't fix. If it's worth uplifting to 51, feel free to nominate it.
| Assignee | ||
Updated•9 years ago
|
Crash Signature: [@ mozilla::widget::NativeKey::GetFollowingCharMessage(tagMSG&)]
[@ mozilla::widget::NativeKey::GetFollowingCharMessage]
Comment 12•8 years ago
|
||
hi, crashes with this signature are still around and increasing in 52.0b1... should we reopen the bug or should a new one be filed for those?
Flags: needinfo?(masayuki)
| Assignee | ||
Comment 13•8 years ago
|
||
(In reply to [:philipp] from comment #12)
> hi, crashes with this signature are still around and increasing in 52.0b1...
> should we reopen the bug or should a new one be filed for those?
No, we've already had bug 992751.
Flags: needinfo?(masayuki)
| Assignee | ||
Comment 14•8 years ago
|
||
And we wasted 4 months for getting the result because such users are not using Nightly nor Aurora, sigh...
| Assignee | ||
Comment 15•8 years ago
|
||
(In reply to Masayuki Nakano [:masayuki] from comment #13)
> (In reply to [:philipp] from comment #12)
> > hi, crashes with this signature are still around and increasing in 52.0b1...
> > should we reopen the bug or should a new one be filed for those?
>
> No, we've already had bug 992751.
Oops, bug 962140. I think that bug 992751 was fixed by the patches for this bug.
You need to log in
before you can comment on or make changes to this bug.
Description
•