Bug 1302956 part.1 NativeKey should store latest instance with sLatestInstance r=m_kato

For detecting nested creation of NativeKey instances, NativeKey should manage the latest instance with sLastestInstance for the other instances and previous instance with mLastInstance.

MozReview-Commit-ID: BFZ0cr1640S